        PR c++/29048         * semantics.c (finish_qualified_id_expr): Avoid duplicate access         check here, too.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132261 138bc75d-0d04-0410-961f-82ee72b054a4